# studyServer

./: CMakeLists.txt  studyServer.sln  test00.sln
esayClient/: esayClient.vcxproj  main.cpp
esayServer/: main.cpp  test01.vcxproj
studyServer/: test00.vcxproj
test00/: main.cpp  test00.vcxproj
test01/: main.cpp  test01.vcxproj
